# vision

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  Makefile.mac  README.md  ROADMAP.md  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  turbo.json
.claude/: settings.json  settings.local.json
.rag/test/: chroma.sqlite3  meta.json
.rag/test-id/: chroma.sqlite3  meta.json
.turbo/cache/: 32dd10bc1860640a-manifest.json  32dd10bc1860640a-meta.json  32dd10bc1860640a.tar.zst  994aae4a6e91e5c0-manifest.json  994aae4a6e91e5c0-meta.json  994aae4a6e91e5c0.tar.zst
.turbo/preferences/: tui.json
apps/: .env.example
apps/api-web/: drizzle.config.ts  package.json  todo.md  tsconfig.json  vitest.config.mts
apps/web/: .env.example  README.md  components.json  next.config.ts  oxlint.config.ts  package.json  postcss.config.mjs  tsconfig.app.json  tsconfig.test.json
config/video_asr/: batch_a.yaml  batch_b.yaml  sources.yaml
docs/: ai-integration-risks.md  ai-video-toolstack.md  architecture.md  constitution.md  douyin-live-starter-guide.md  how-to-find-real-insights.md  information-sources.md  live-setup-guide.md  live-streaming-overview.md  live-streaming-research.md  meta-prompting.md  quickstart.md  sample-plan-luto-yam.md  solo-creator-playbook.md  style-guide.md  tech-stack.md  template.md  video-production-pipeline.md
docs/superpowers/plans/: 2026-04-12-api-live.md  2026-04-12-director-agent.md  2026-04-12-live-agent.md  2026-04-13-live-ai-monitor.md  2026-04-13-liveplan.md  2026-04-13-script-segment-redesign.md  2026-04-13-session-danmaku-split.md  2026-04-17-dongyuhui-live-skill.md  2026-04-18-pr1-ordered-item-store.md  2026-04-18-pr2-synthesized-event-and-stage.md  2026-04-18-pr3-mutations-and-broadcast-pipeline.md  2026-04-18-python-monorepo-migration.md  2026-04-18-video-asr-pipeline-part2.md  2026-04-18-video-asr-pipeline.md  2026-04-19-asr-to-plan-backend.md  2026-04-19-asr-to-plan-frontend.md  (+2 more)
python-packages/api/: pyproject.toml
python-packages/api/data/talk_points/my-lib/competitor_clips/: vid123.md
python-packages/api/data/talk_points/my-lib/scripts/: vid123_summary.md
python-packages/api/src/vision_api/: __init__.py  api_key.py  api_key_test.py  deps.py  live_routes_test.py  main.py  rag_library_routes.py  rag_library_routes_test.py  settings.py  video_asr_routes.py  video_asr_routes_test.py
python-packages/api/src/vision_api/static/: progress.html
python-packages/intelligence/: pyproject.toml
python-packages/intelligence/src/vision_intelligence/: __init__.py
python-packages/intelligence/src/vision_intelligence/video_asr/: __init__.py  analyzer.py  analyzer_test.py  cleaning.py  cleaning_test.py  cli.py  cli_test.py  config.py  config_test.py  cost.py  cost_test.py  gemini_lock.py  jobs.py  jobs_test.py  manifest.py  manifest_test.py  merger.py  merger_test.py  models.py  models_test.py  pipeline.py  pipeline_test.py  preprocessor.py  preprocessor_test.py  renderer.py  renderer_test.py  runner.py  storage.py  storage_test.py
python-packages/intelligence/src/vision_intelligence/video_asr/asr/: __init__.py  base.py  funasr.py  gemini.py  gemini_test.py
python-packages/intelligence/src/vision_intelligence/video_asr/prompts/: style.md  summarize.md  transcribe.md
python-packages/intelligence/src/vision_intelligence/video_asr/sources/: __init__.py  base.py  base_test.py  registry.py  registry_test.py  yaml_loader.py  yaml_loader_test.py  yt_dlp_source.py  yt_dlp_source_test.py
python-packages/live/: pyproject.toml
python-packages/live/src/vision_live/: README.md  __init__.py  cdp_collector.py  cdp_collector_test.py  danmaku_manager.py  danmaku_manager_test.py  director_agent.py  director_agent_memory_test.py  director_agent_persona_test.py  director_agent_prompt_test.py  director_agent_rag_test.py  embedder.py  embedder_test.py  event_collector.py  event_collector_test.py  example_script.yaml  knowledge_base.py  knowledge_base_test.py  llm_client_test.py  orchestrator.py  orchestrator_test.py  plan_routes.py  plan_routes_test.py  plan_store.py  plan_store_test.py  proto_douyin.py  rag.py  rag_chunking_test.py  rag_cli.py  rag_cli_test.py  rag_integration_test.py  rag_library_store.py  rag_library_store_test.py  rag_routes.py  rag_routes_test.py  rag_test.py  routes.py  routes_test.py  schema_test.py  script_runner.py  (+13 more)
python-packages/shared/: pyproject.toml
python-packages/shared/src/vision_shared/: __init__.py  db.py  event_bus.py  event_bus_test.py  ordered_item_store_test.py
scripts/: seed_plans.py
scripts/live/: README.md  agent.py  director_agent.py  douyin_collector.py  event_collector.py  knowledge_base.py  llm_client.py  orchestrator.py  schema.py  script_runner.py  try_voices.py  tts_demo.py  tts_player.py
src/api/: deps.py  main.py  settings.py
src/live/: README.md  agent.py  cdp_collector.py  cdp_collector_test.py  danmaku_manager.py  danmaku_manager_test.py  director_agent.py  director_agent_memory_test.py  director_agent_persona_test.py  director_agent_prompt_test.py  director_agent_rag_test.py  douyin_collector.py  event_collector.py  event_collector_test.py  knowledge_base_test.py  llm_client.py  llm_client_test.py  orchestrator.py  orchestrator_test.py  plan_routes.py  plan_routes_test.py  plan_store.py  plan_store_test.py  rag_chunking.py  rag_chunking_test.py  rag_cli.py  rag_cli_test.py  rag_integration_test.py  rag_routes.py  rag_routes_test.py  rag_test.py  routes.py  routes_test.py  schema.py  schema_test.py  script_runner.py  script_runner_test.py  session.py  session_lifecycle_test.py  session_memory_test.py  (+8 more)
src/shared/: db.py  ordered_item_store.py  ordered_item_store_test.py
tests/: test_placeholder.py
tests/api/: test_live_routes.py
tests/live/: test_danmaku_manager.py  test_director_agent.py  test_douyin_collector.py  test_event_collector.py  test_knowledge_base.py  test_llm_client.py  test_orchestrator.py  test_schema.py  test_script_runner.py  test_session.py  test_tts_player.py
tests/shared/: test_db.py  test_event_bus.py
vision/: __init__.py
(+446 files in other folders)
