[project]
name = "vision"
version = "0.1.0"
description = "Visual content creation toolkit — live streaming, video editing, audio processing"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

# TEMPORARY safety net during monorepo migration.
# Will be replaced with `vision-api` in Task 12.
dependencies = [
    "google-cloud-aiplatform>=1.147.0",
    "google-cloud-texttospeech>=2.17.0",
    "google-genai>=1.72.0",
    "mitmproxy>=12.2.1",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pyyaml>=6.0.3",
    "sounddevice>=0.5.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "playwright>=1.49.0",
    "betterproto>=2.0.0b7",
    "litellm>=1.50.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "python-multipart>=0.0.9",
    "vision-shared",
]

[tool.uv.workspace]
members = ["python-packages/*"]

[tool.uv.sources]
vision-shared = { workspace = true }
vision-intelligence = { workspace = true }
vision-live = { workspace = true }
vision-api = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["src", "tests", "python-packages"]
python_files = ["*_test.py", "test_*.py"]
markers = [
    "slow: tests that download models / run real embeddings",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
