[project]
name = "vision"
version = "0.1.0"
description = "Visual content creation toolkit — live streaming, video editing, audio processing"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "vision-api",
]

[tool.uv.workspace]
members = ["python-packages/*"]

[tool.uv.sources]
vision-shared = { workspace = true }
vision-intelligence = { workspace = true }
vision-live = { workspace = true }
vision-api = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python-packages"]
python_files = ["*_test.py"]
markers = [
    "slow: tests that download models / run real embeddings",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
