[project]
name = "vision-api"
version = "0.1.0"
description = "Vision FastAPI entrypoint"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "vision-shared",
    "vision-intelligence",
    "vision-live",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
vision-api = "vision_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_api"]
