[project]
name = "vision-intelligence"
version = "0.1.0"
description = "Vision intelligence modules (competitor monitoring, topic discovery, content ingestion)"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "vision-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_intelligence"]
