[project]
name = "vision-live"
version = "0.1.0"
description = "Vision live-streaming modules: session, danmaku, TTS, RAG, LLM gateway"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "vision-shared",
    "litellm>=1.50.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "google-genai>=1.72.0",
    "google-cloud-aiplatform>=1.147.0",
    "google-cloud-texttospeech>=2.17.0",
    "pyttsx3>=2.99",
    "sounddevice>=0.5.5",
    "numpy>=2.4.4",
    "mitmproxy>=12.2.1",
    "playwright>=1.49.0",
    "betterproto>=2.0.0b7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_live"]
