[project]
name = "vision-shared"
version = "0.1.0"
description = "Vision shared utilities: database, event bus, common helpers"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "aiosqlite>=0.20",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_shared"]
